--- a/src/form/task-list/task-item/TaskItem.css
+++ b/src/form/task-list/task-item/TaskItem.css
@@ -1,3 +1,13 @@
 .task__checked {
   text-decoration: line-through;
 }
+
+.bi-trash3 {
+  position: absolute;
+  right: 10px;
+}
+
+.bi-trash3:hover {
+  color: #9e1c1c;
+  transition: all 0.7s;
+}
